# Libcbc

./: .gitignore  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md
libft/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  ft_atoi.c  ft_countchiffres.c  ft_freetab.c  ft_isalpha.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstiter.c  ft_lstnew.c  ft_memalloc.c  ft_memcmp.c  ft_memdel.c  ft_memmove.c  ft_putchar.c  ft_putnbr.c  ft_putnstr.c  ft_putstr_fd.c  ft_putwchar.c  ft_putwstr.c  ft_strdel.c  ft_strequ.c  ft_strjoincl.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strnew.c  ft_strrchr.c  ft_strrev.c  ft_strstr.c  ft_strsub.c  ft_uitobase.c  ft_uitohex.c  ft_uitooctal.c
libft/includes/: ft_deamonize.h  ft_libgen.h  libft.h  malloc_test.h
libft/includes/array/: array.h
libft/includes/ft_printf/: ft_get.h  libftprintf.h  printer.h  printf.h  printf_type.h  printf_utils.h  type.h  utils.h
libft/includes/gnl/: get_next_line.h
libft/includes/logger/: logger.h  logger_intern.h
libft/includes/string/: ft_string.h
libft/includes/types/: bool.h  stack.h
libft/includes/unistd/: ft_unistd.h
libft/srcs/array/: array.c  array_copy.c  array_destroy.c  array_growth.c  array_insert.c  array_pushpop.c  array_remove.c  array_setget.c  array_shrink.c  array_swap.c
libft/srcs/core/: ft_bzero.c  ft_ctostr.c  ft_freetab.c  ft_imtoa.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhitespace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_lstpush.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memset.c  ft_nbword.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnstr.c  ft_putstr.c  ft_putwchar.c  ft_putwchar_fd.c  ft_putwstr.c  ft_putwstr_fd.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclean.c  (+31 more)
libft/srcs/deamonize/: ft_demonize.c
libft/srcs/ft_printf/: ft_parse_args.c  ft_parse_args2.c  ft_printf.c  ft_printf_2.c  printer_c.c  printer_d.c  printer_def.c  printer_o.c  printer_p.c  printer_per.c  printer_s.c  printer_u.c  printer_x.c  utils.c
libft/srcs/gnl/: get_next_line.c
libft/srcs/libgen/: ft_basename.c
libft/srcs/logger/: logger.c  logger_log.c  logger_log_dbg.c  logger_utils.c
libft/srcs/stack/: stack.c  stack_2.c
libft/srcs/string/: string.c  string_clean.c  string_clone.c  string_dup.c  string_growth.c  string_insert.c  string_join.c  string_remove.c  string_replace.c  string_shrink.c
libft/srcs/unistd/: ft_getopt.c
libft/tests/: Makefile  libft-test  minishell-test
libft/tests/includes/: headers.h
libft/tests/srcs/: main.c
libft/tests/srcs/array/: test_array_create.c  test_array_simple_usage.c
libft/tests/srcs/stack/: test_stack.c
libft/tests/srcs/string/: test_string_clone.c  test_string_create.c  test_string_dup.c  test_string_insert.c  test_string_join.c  test_string_remove.c  test_string_replace.c  test_string_shrink.c
libftprintf/: .gitmodules  CMakeLists.txt  Makefile
libftprintf/include/: libftprintf.h  printer.h  printf.h  type.h  utils.h
libftprintf/includes/: ft_get.h  ftprintf.h  libftprintf.h  printer.h  printf.h  type.h  utils.h
libftprintf/includes/intern/: ft_get.h  printer.h  printf_utils.h
libftprintf/source/: ft_parse_args.c  ft_print_function.c  ft_printf.c  printer_C.c  printer_D.c  printer_O.c  printer_S.c  printer_U.c  printer_X.c  printer_c.c  printer_d.c  printer_i.c  printer_o.c  printer_per.c  printer_s.c  printer_x.c  utils.c
libftprintf/sources/: ft_parse_args.c  ft_printf.c  printer_c.c  printer_d.c  printer_def.c  printer_o.c  printer_p.c  printer_per.c  printer_s.c  printer_u.c  printer_x.c  utils.c
libftprintf/srcs/ft_printf/: ft_parse_args.c  ft_parse_args2.c  ft_printf.c  ft_printf_2.c  printer_c.c  printer_d.c  printer_def.c  printer_o.c  printer_p.c  printer_per.c  printer_s.c  printer_u.c  printer_x.c  utils.c
liblogger/: .gitignore  CMakeLists.txt  Makefile
liblogger/includes/: logger.h  logger_intern.h
liblogger/includes/intern/: logger_intern.h
liblogger/srcs/logger/: logger.c  logger_log.c  logger_log_dbg.c  logger_utils.c
libtcaps/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  libtcaps.sublime-project  libtcaps.sublime-workspace
libtcaps/example/: Makefile
libtcaps/example/includes/: tcaps_test.h
libtcaps/example/srcs/: main.c
libtcaps/example/srcs/exec/: tcaps_exec_alt.c  tcaps_exec_alt_arrow.c  tcaps_exec_arrow.c  tcaps_exec_ctrl_1.c  tcaps_exec_ctrl_2.c  tcaps_exec_ctrl_arrow.c  tcaps_exec_delete.c  tcaps_exec_home_end.c  tcaps_exec_insert.c  tcaps_exec_tab.c  tcaps_key_exec.c
libtcaps/example/srcs/term/: term_modes.c
libtcaps/includes/: libtcaps.h
libtcaps/srcs/: tcaps_alt.c  tcaps_alt_arrow.c  tcaps_arrow.c  tcaps_backspace.c  tcaps_bell.c  tcaps_ctrl_1.c  tcaps_ctrl_2.c  tcaps_ctrl_arrow.c  tcaps_delete.c  tcaps_escape.c  tcaps_escape_enter.c  tcaps_home_end.c  tcaps_insert.c  tcaps_moving.c  tcaps_moving_2.c  tcaps_size.c  tcaps_tab.c  tcaps_utils.c  tcaps_video.c
libtcaps/tests/srcs/: main.c
libtcaps/tests/srcs/exec/: tcaps_exec_ctrl_1.c
tests/: CMakeLists.txt
tests/includes/: headers.h
tests/srcs/logger/: test_logger.c
tests/srcs/string/: test_string_dup.c  test_string_join.c
