cmake_minimum_required(VERSION 3.6)
project(ft)

set(CMAKE_C_STANDARD 11)
set (CMAKE_C_FLAGS "-Wall -Werror -Wextra")

set(SOURCE_FILES
        includes/array/array.h
        includes/ft_printf/ft_get.h
        includes/ft_printf/libftprintf.h
        includes/ft_printf/printer.h
        includes/ft_printf/printf_type.h
        includes/ft_printf/printf_utils.h
        includes/gnl/get_next_line.h
        includes/logger/logger.h
        includes/logger/logger_intern.h
        includes/string/ft_string.h
        includes/types/bool.h
        includes/types/stack.h
        includes/unistd/ft_unistd.h
        includes/libft.h
        srcs/array/array.c
        srcs/array/array_copy.c
        srcs/array/array_destroy.c
        srcs/array/array_growth.c
        srcs/array/array_insert.c
        srcs/array/array_pushpop.c
        srcs/array/array_remove.c
        srcs/array/array_setget.c
        srcs/array/array_shrink.c
        srcs/array/array_swap.c
        srcs/core/ft_atoi.c
        srcs/core/ft_bzero.c
        srcs/core/ft_countchiffres.c
        srcs/core/ft_ctostr.c
        srcs/core/ft_freetab.c
        srcs/core/ft_imtoa.c
        srcs/core/ft_isalnum.c
        srcs/core/ft_isalpha.c
        srcs/core/ft_isascii.c
        srcs/core/ft_isdigit.c
        srcs/core/ft_isprint.c
        srcs/core/ft_iswhitespace.c
        srcs/core/ft_itoa.c
        srcs/core/ft_lstadd.c
        srcs/core/ft_lstdel.c
        srcs/core/ft_lstdelone.c
        srcs/core/ft_lstiter.c
        srcs/core/ft_lstmap.c
        srcs/core/ft_lstnew.c
        srcs/core/ft_lstpush.c
        srcs/core/ft_memalloc.c
        srcs/core/ft_memccpy.c
        srcs/core/ft_memchr.c
        srcs/core/ft_memcmp.c
        srcs/core/ft_memcpy.c
        srcs/core/ft_memdel.c
        srcs/core/ft_memmove.c
        srcs/core/ft_memset.c
        srcs/core/ft_nbword.c
        srcs/core/ft_putchar.c
        srcs/core/ft_putchar_fd.c
        srcs/core/ft_putendl.c
        srcs/core/ft_putendl_fd.c
        srcs/core/ft_putnbr.c
        srcs/core/ft_putnbr_fd.c
        srcs/core/ft_putnstr.c
        srcs/core/ft_putstr.c
        srcs/core/ft_putstr_fd.c
        srcs/core/ft_putwchar.c
        srcs/core/ft_putwstr.c
        srcs/core/ft_strcat.c
        srcs/core/ft_strchr.c
        srcs/core/ft_strclean.c
        srcs/core/ft_strclr.c
        srcs/core/ft_strcmp.c
        srcs/core/ft_strcpy.c
        srcs/core/ft_strdel.c
        srcs/core/ft_strdup.c
        srcs/core/ft_strequ.c
        srcs/core/ft_striter.c
        srcs/core/ft_striteri.c
        srcs/core/ft_strjoin.c
        srcs/core/ft_strjoincl.c
        srcs/core/ft_strlcat.c
        srcs/core/ft_strlen.c
        srcs/core/ft_strmap.c
        srcs/core/ft_strmapi.c
        srcs/core/ft_strncat.c
        srcs/core/ft_strncmp.c
        srcs/core/ft_strncpy.c
        srcs/core/ft_strnequ.c
        srcs/core/ft_strnew.c
        srcs/core/ft_strnstr.c
        srcs/core/ft_strrchr.c
        srcs/core/ft_strrev.c
        srcs/core/ft_strsplit.c
        srcs/core/ft_strstr.c
        srcs/core/ft_strsub.c
        srcs/core/ft_strtabdup.c
        srcs/core/ft_strtrim.c
        srcs/core/ft_tablen.c
        srcs/core/ft_tolower.c
        srcs/core/ft_toupper.c
        srcs/core/ft_uitobase.c
        srcs/core/ft_uitohex.c
        srcs/core/ft_uitooctal.c
        srcs/core/ft_wcslen.c
        srcs/core/ft_wctostr.c
        srcs/core/ft_wordlen.c
        srcs/core/ft_wstostr.c
        srcs/ft_printf/ft_parse_args.c
        srcs/ft_printf/ft_parse_args2.c
        srcs/ft_printf/ft_printf.c
        srcs/ft_printf/printer_c.c
        srcs/ft_printf/printer_d.c
        srcs/ft_printf/printer_def.c
        srcs/ft_printf/printer_o.c
        srcs/ft_printf/printer_p.c
        srcs/ft_printf/printer_per.c
        srcs/ft_printf/printer_s.c
        srcs/ft_printf/printer_u.c
        srcs/ft_printf/printer_x.c
        srcs/ft_printf/utils.c
        srcs/gnl/get_next_line.c
        srcs/logger/logger.c
        srcs/logger/logger_utils.c
        srcs/string/string.c
        srcs/string/string_clean.c
        srcs/string/string_clone.c
        srcs/string/string_dup.c
        srcs/string/string_growth.c
        srcs/string/string_insert.c
        srcs/string/string_join.c
        srcs/string/string_remove.c
        srcs/string/string_replace.c
        srcs/string/string_shrink.c
        srcs/unistd/ft_getopt.c)

include_directories(includes)

add_library(ft ${SOURCE_FILES})